added livereload to html, css, and js, created seperate dev and pro tasks for development and production

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta charset="utf-8">
     <meta name="description" content="Grunt/Sass frontend boiler by Alex Baker.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="static/styles/main.prefixed.min.css">
-    <script src="static/js/main.built.min.js"></script>
+    <link rel="stylesheet" href="static/styles/main.css">
+    <script src="static/js/main.js"></script>
   </head>
   <body>
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
