moved and renamed files, added copy task for images directory, made custom task to delete js file if the file is empty

--- a/index.html
+++ b/index.html
@@ -6,8 +6,13 @@
     <meta charset="utf-8">
     <meta name="description" content="Grunt/Sass frontend boiler by Alex Baker.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- build:css main.min.css -->
+    <link rel="stylesheet" href="static/styles/normalize.css">
     <link rel="stylesheet" href="static/styles/main.css">
+    <!-- /build -->
+    <!-- build:js main.min.js -->
     <script src="static/js/main.js"></script>
+    <!-- /build -->
   </head>
   <body>
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
