--- a/index.html
+++ b/index.html
@@ -7,12 +7,17 @@
     <meta name="description" content="Grunt/Sass frontend boiler by Alex Baker.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- build:css main.min.css -->
-    <link rel="stylesheet" href="static/styles/normalize.css">
-    <link rel="stylesheet" href="static/styles/main.css">
+      <link rel="stylesheet" href="static/styles/normalize.css">
+      <link rel="stylesheet" href="static/styles/main.css">
     <!-- /build -->
-    <!-- build:js main.min.js -->
+    <!-- build:remove -->
     <script src="static/js/main.js"></script>
     <!-- /build -->
+    <!-- build:template
+    <% if (environment === 'dist') { %>
+    <script src="main.min.js"></script>
+    <% } %>
+    /build -->
   </head>
   <body>
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
