preserved static/img file path for html linked images

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="description" content="Grunt/Sass frontend boiler by Alex Baker.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- build:css main.min.css -->
+    <!-- build:css static/main.min.css -->
       <link rel="stylesheet" href="static/styles/normalize.css">
       <link rel="stylesheet" href="static/styles/main.css">
     <!-- /build -->
@@ -15,7 +15,7 @@
     <!-- /build -->
     <!-- build:template
     <% if (environment === 'dist') { %>
-    <script src="main.min.js"></script>
+    <script src="static/main.min.js"></script>
     <% } %>
     /build -->
   </head>
