Changed name of project across repo and cleaned up wording in the readme file.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <title></title>
     <meta charset="utf-8">
-    <meta name="description" content="Grunt/Sass frontend boiler by Alex Baker.">
+    <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- build:css static/main.min.css -->
       <link rel="stylesheet" href="static/styles/normalize.css">
