Moved render blocking script elements to the bottom of the body element.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
       <link rel="stylesheet" href="static/styles/normalize.css">
       <link rel="stylesheet" href="static/styles/main.css">
     <!-- /build -->
+  </head>
+  <body>
+
+    <!-- Insert HTML here -->
+
+    <!-- Javascript -->
     <!-- build:remove -->
     <script src="static/js/main.js"></script>
     <!-- /build -->
@@ -18,8 +24,6 @@
     <script src="static/main.min.js"></script>
     <% } %>
     /build -->
-  </head>
-  <body>
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
     <script>
       (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;e=o.createElement(i);r=o.getElementsByTagName(i)[0];e.src='//www.google-analytics.com/analytics.js';r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));ga('create','UA-XXXXX-X');ga('send','pageview');
